--- a/css/index.css
+++ b/css/index.css
@@ -37,4 +37,22 @@ html,body{
 
 .index_login{
     display: none; opacity: 0;
+    width: 100%;
+    padding: 0.3rem 0 0.3rem 0;
+}
+label{
+    padding: 0.2rem 0.4rem;
+}
+label span,
+label input{
+    display: block;
+    font-size: 0.3rem !important;
+}
+label input{
+    padding-left: 0.2rem;
+}
+.login_submit{
+    margin: 0 auto; width: 80%; height: 0.6rem; line-height: 0.6rem;
+    text-align: center; background: #6AB9FB; color: #eee;
+    margin-top: 0.2rem; font-size: 0.3rem;
 }
